--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.14.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0"
   }
 }
