--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "warn",
+      "array-callback-return": "warn"
+    }
   },
   "browserslist": {
     "production": [
@@ -41,8 +45,6 @@
     "postcss": "^8.4.14",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.14.2",
-    "tailwindcss": "^3.0.24",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0"
+    "tailwindcss": "^3.0.24"
   }
 }
